RESOLVED FIXED 281890
Skip computeCompositingRequirements for subtrees that haven't changed and don't contribute overlap.
https://bugs.webkit.org/show_bug.cgi?id=281890
Summary Skip computeCompositingRequirements for subtrees that haven't changed and don...
Matt Woodrow
Reported 2024-10-21 17:43:18 PDT
Layers that haven't changed, don't have any composited descendant and clip their descendants shouldn't need a descendant traversal. Normally this is done to check for any compositing changes and to accumulate overlap, but neither of those should be possible with the given conditions.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-21 17:43:29 PDT
Matt Woodrow
Comment 2 2024-10-21 17:46:14 PDT
EWS
Comment 3 2024-10-23 18:53:28 PDT
Committed 285632@main (09fa4e566b17): <https://commits.webkit.org/285632@main> Reviewed commits have been landed. Closing PR #35560 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.